# DAMCC_1.2

./: .gitignore  README.md  Todo  cc_embedder.py  config.py  damcc.py  eval.py  loss_functions.py  model.py  run_damcc.py  sampler.py  test.py  train.py
.notebooks/: D2G2.ipynb  Torch Geometric Temporal.ipynb  graph_temporal_metrics.ipynb
archived_code/: old_run_damcc.py
damnets-tagGen-dymonds/: Dockerfile  Instructions  README.md  age_runner.py  create_damnets_compatible_datasets.py  entrypoint.sh  eval.py  (+10 more)
evaluation/: Damnets.ipynb  Dockerfile  LICENCE  Makefile  README.md  docker-compose.yml  frozen-env.txt  move_exp_files.py  move_gg.py  move_tg.py  pyproject.toml  pytest.ini  setup.py
evaluation/experiments/: generate_random.py  results_to_latex.py  run_evaluation.py  run_evaluation_altered.py  see_graphs.py
evaluation/for_me/: try_data.ipynb
evaluation/notebooks/: Damnets.ipynb  dataset_showcase.ipynb  for_me.py  perturb_graphs.ipynb
evaluation/scripts/: entrypoint.sh  install-pyg.sh  licence.py  pytest.sh
evaluation/src/brainiac_temporal/: __init__.py  types.py
evaluation/src/brainiac_temporal/data/: __init__.py  datasets.py  graph_timeseries.py  lightning.py  perturb_feat.py  peturb_topology.py  utils.py
evaluation/src/brainiac_temporal/metrics/: __init__.py  evaluator.py  evaluator_original.py  utils.py
evaluation/src/brainiac_temporal/metrics/nndr/: __init__.py  nndr.py  utils.py
evaluation/src/brainiac_temporal/metrics/statistics/: __init__.py  statistics.py  utils.py
evaluation/src/brainiac_temporal/metrics/temporal_aggregations/: __init__.py  dtw.py  ks2d.py  pacf.py
evaluation/src/brainiac_temporal/metrics/temporal_metrics/: __init__.py  features_correlation.py  temporal_correlation.py
evaluation/src/brainiac_temporal/metrics/utility/: __init__.py  discriminative_score.py  link_forecasting.py  node_classification.py
evaluation/src/brainiac_temporal/models/: __init__.py  lightning.py  link_predictor.py  node_classifier.py  recurrent_gcn.py
evaluation/test/: conftest.py
evaluation/test/data/: test_datasets.py  test_graph_time_series.py  test_pertubation_topology.py  test_perturbation_feat.py  test_utils.py
evaluation/test/metrics/: test_evaluator.py
evaluation/test/metrics/data/: test_data_converter.py
evaluation/test/metrics/nndr/: test_nndr.py  utils.py
evaluation/test/metrics/statistics/: test_graph_statistics.py
evaluation/test/metrics/temporal_aggregations/: test_dtw.py  test_ks2d.py  test_pacf.py
evaluation/test/metrics/temporal_metrics/: test_features_correlation.py  test_temporal_correlation.py
evaluation/test/metrics/utility/: test_discriminative_score.py  test_link_forecasting_metric.py  test_node_classification_metric.py
evaluation/test/models/: test_link_predictor.py  test_node_classifier.py
(+78 files in other folders)
